--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
 *.yaml
-*.yml
 *.xml
 *.json
 *.log
@@ -16,3 +15,30 @@ __pycache__/
 
 data/
 logs/
+
+# Nix development environment
+.mysql/
+.direnv/
+result
+result-*
+
+# Python local packages
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+.envrc
+flake.lock
